# cgal_sphere_mesh_rendering

./: CMakeLists.txt  Renderer.cpp  Renderer.hpp  ScreenshotHandler.cpp  ScreenshotHandler.hpp  main.cpp
Shaders/: plane_fragment_shader.glsl  plane_vertex_shader.glsl  solid_sphere_fragment_shader.glsl  solid_sphere_geometry_shader.glsl  solid_sphere_vertex_shader.glsl  sphere_mesh_fragment_shader.glsl  sphere_mesh_vertex_shader.glsl
